Trying to make API printing its gc.log