@@ -19,7 +19,8 @@ libraryDependencies += "org.scalatestplus.play" %% "scalatestplus-play" % "3.1.2
 
 javaOptions in Universal ++= Seq(
   "-Dpidfile.path=/dev/null",
-  "-J-Xms64m", "-J-Xmx110m"
+  "-J-Xms64m", "-J-Xmx110m",
+  "-J-XX:+PrintGCDateStamps", "-J-XX:+PrintGCDetails",
 )
 
 import com.typesafe.sbt.packager.docker.DockerChmodType
